--- a/sample web/hospital.html
+++ b/sample web/hospital.html
@@ -594,7 +594,7 @@ button:hover {
 <body>
 
   <header>
-    <img src="C:\Users\admin\OneDrive\Desktop\sample web\images\ChatGPT Image Jun 21, 2025, 03_05_56 PM.png" alt="Logo" style="height:40px;">
+    <img src="./images/ChatGPT Image Jun 21, 2025, 03_05_56 PM.png" alt="Logo" style="height:40px;">
 
     <nav>
       <a href="#">Home</a>
@@ -608,15 +608,15 @@ button:hover {
   <div class="banner-container">
     <div class="slider" id="slider">
       <div class="slide">
-        <img src="C:\Users\admin\OneDrive\Desktop\sample web\images\slide 2.jpg" alt="Slide 1">
+        <img src="./images/slide 2.jpg" alt="Slide 1">
         <div class="slide-text">Welcome to Our Hospital Network</div>
       </div>
       <div class="slide">
-        <img src="C:\Users\admin\OneDrive\Desktop\sample web\images\sli.jpg" alt="Slide 2"> 
+        <img src="./images/sli.jpg" alt="Slide 2"> 
         <div class="slide-text">We Provide 24/7 Emergency Services</div>
       </div>
       <div class="slide">
-        <img src="C:\Users\admin\OneDrive\Desktop\sample web\images\slid.webp" alt="Slide 3">
+        <img src="./images/slid.webp" alt="Slide 3">
         <div class="slide-text">Book Your Health Checkup Today</div>
       </div>
     </div>
@@ -648,7 +648,7 @@ button:hover {
    
   <!-- Card 1 -->
   <div class="card">
-    <img src="C:\Users\admin\OneDrive\Desktop\sample web\images\s4.jpg" class="card-img" alt="...">
+    <img src="./images/s4.jpg" class="card-img" alt="...">
     <div class="card-content">
       <h3 class="card-title">Emergency Care</h3>
       <p class="card-desc short">Emergency departments handle life-threatening conditions such as heart attacks, </p>
@@ -660,7 +660,7 @@ button:hover {
   <!-- Repeat the same structure for 7 more cards -->
   <!-- Card 2 -->
   <div class="card">
-    <img src="C:\Users\admin\OneDrive\Desktop\sample web\images\s7.jpg" class="card-img" alt="...">
+    <img src="./images/s7.jpg" class="card-img" alt="...">
     <div class="card-content">
       <h3 class="card-title">Endoscopy  Services</h3>
       <p class="card-desc short">Minimally invasive procedures using a camera to examine </p>
@@ -670,7 +670,7 @@ button:hover {
     </div>
   <!--<div class="card-container"> Card 1 -->
   <div class="card">
-    <img src="C:\Users\admin\OneDrive\Desktop\sample web\images\s2.jpg" class="card-img" alt="Mountain View">
+    <img src="./images/s2.jpg" class="card-img" alt="Mountain View">
     <div class="card-content">
       <h3 class="card-title">Impatient care</h3>
       <p class="card-desc short">When a patient’s condition requires constant monitoring, surgery, or extended.</p>
@@ -682,7 +682,7 @@ button:hover {
 
   <!-- Card 2 -->
   <div class="card">
-    <img src="C:\Users\admin\OneDrive\Desktop\sample web\images\s3.jpeg" class="card-img" alt="Forest Walk">
+    <img src="./images/s3.jpeg" class="card-img" alt="Forest Walk">
     <div class="card-content">
       <h3 class="card-title">General Medicine</h3>
       <p class="card-desc short">Focuses on diagnosing and treating a wide range of common illnesses like fever, flu, </p>
@@ -693,7 +693,7 @@ button:hover {
 
   <!-- Card 3 -->
   <div class="card">
-    <img src="C:\Users\admin\OneDrive\Desktop\sample web\images\s5.jpeg" class="card-img" alt="Ocean Sunset">
+    <img src="./images/s5.jpeg" class="card-img" alt="Ocean Sunset">
     <div class="card-content">
       <h3 class="card-title">Laboratory Tests</h3>
       <p class="card-desc short">Includes blood tests (CBC, glucose), urine tests, biopsies, cultures, and </p>
@@ -704,7 +704,7 @@ button:hover {
 
   <!-- Card 4 -->
   <div class="card">
-    <img src= "C:\Users\admin\OneDrive\Desktop\sample web\images\s6.jpeg"class="card-img" alt="Desert Adventure">
+    <img src= "./images/s6.jpeg"class="card-img" alt="Desert Adventure">
     <div class="card-content">
       <h3 class="card-title">Diagnostic imaging</h3>
       <p class="card-desc short">Modern hospitals use advanced imaging tools</p>
@@ -715,7 +715,7 @@ button:hover {
 
   <!-- Card 5 -->
   <div class="card">
-    <img src="C:\Users\admin\OneDrive\Desktop\sample web\images\s9.jpeg" class="card-img" alt="diagnostic imaging">
+    <img src="./images/s9.jpeg" class="card-img" alt="diagnostic imaging">
     <div class="card-content">
       <h3 class="card-title">Nutrition & Dietetics</h3>
       <p class="card-desc short">Offers personalized diet plans for patients with diabetes, heart</p>
@@ -726,7 +726,7 @@ button:hover {
 
   <!-- Card 6 -->
   <div class="card">
-    <img src= "C:\Users\admin\OneDrive\Desktop\sample web\images\s8.png" class="card-img" alt="Countryside Calm">
+    <img src= "./images/s8.png" class="card-img" alt="Countryside Calm">
     <div class="card-content">
       <h3 class="card-title">Physiotherapy</h3>
       <p class="card-desc short">Helps patients regain mobility and strength after injuries, surgeries, or </p>
@@ -739,11 +739,11 @@ button:hover {
   <div><h2 style="padding-left: 20px; color: blue; text-align: center; ">Hospitals </h2></div>
   <div class="poster"  style="flex: 50px;">
   <div class="poster" id="poster">
-    <div class="box"><img src="C:\Users\admin\OneDrive\Desktop\sample web\images\aiims.jpeg" alt="1"></div>
-    <div class="box"><img src="C:\Users\admin\OneDrive\Desktop\sample web\images\Apollo-DRDO-Hospitals-Kanchanbagh-Hyderabad_NHT.jpg" alt="2"></div>
-    <div class="box"><img src="C:\Users\admin\OneDrive\Desktop\sample web\images\aster.jpg" alt="3"></div>
-    <div class="box"><img src="C:\Users\admin\OneDrive\Desktop\sample web\images\apollo-hospitals_bannerghatta_road_building-min_0.webp" alt="4"></div>
-    <div class="box"><img src="C:\Users\admin\OneDrive\Desktop\sample web\images\apollo.webp" alt="5"></div>
+    <div class="box"><img src="./images/aiims.jpeg" alt="1"></div>
+    <div class="box"><img src="./images/Apollo-DRDO-Hospitals-Kanchanbagh-Hyderabad_NHT.jpg" alt="2"></div>
+    <div class="box"><img src="./images/aster.jpg" alt="3"></div>
+    <div class="box"><img src="./images/apollo-hospitals_bannerghatta_road_building-min_0.webp" alt="4"></div>
+    <div class="box"><img src="./images/apollo.webp" alt="5"></div>
   </div>
 </div>
 
@@ -758,11 +758,11 @@ button:hover {
  <div><h2 style="padding-left: 20px; color: blue; text-align: center; margin-top: 20px;">Treatments </h2></div>
   <div class="treat" style="flex: 50px;">
   <div class="treat" id="poster" style="border-radius: 9px;">
-    <div class="box"><img src="C:\Users\admin\OneDrive\Desktop\sample web\images\treat 1.jpg" alt="1"></div>
-    <div class="box"><img src="C:\Users\admin\OneDrive\Desktop\sample web\images\treat 2.jpeg" alt="2"></div>
-    <div class="box"><img src="C:\Users\admin\OneDrive\Desktop\sample web\images\treat 3.avif" alt="3"></div>
-    <div class="box"><img src="C:\Users\admin\OneDrive\Desktop\sample web\images\treat 4.jpg" alt="4"></div>
-    <div class="box"><img src="C:\Users\admin\OneDrive\Desktop\sample web\images\treat 5.webp" alt="5"></div>
+    <div class="box"><img src="./images/treat 1.jpg" alt="1"></div>
+    <div class="box"><img src="./images/treat 2.jpeg" alt="2"></div>
+    <div class="box"><img src="./images/treat 3.avif" alt="3"></div>
+    <div class="box"><img src="./images/treat 4.jpg" alt="4"></div>
+    <div class="box"><img src="./images/treat 5.webp" alt="5"></div>
   </div>
 </div>
 
@@ -780,7 +780,7 @@ button:hover {
       <div class="info-text">
         Apollo Hospitals provide world-class healthcare facilities equipped with cutting-edge technology, including advanced operating theatres, intensive care units (ICUs), specialized transplant centers, diagnostic imaging (MRI, CT, PET-CT), and comfortable inpatient rooms. The hospital is designed to offer comprehensive medical services under one roof, ensuring quality care and patient comfort. In emergencies, Apollo offers 24/7 critical care through its well-equipped Accident & Emergency Department, featuring rapid response ambulances, dedicated trauma teams, advanced life-support systems, and tele-ICU services—delivering immediate, expert attention in life-threatening situations.For emergencies, Apollo has a 24x7 Accident & Emergency Department with trained trauma teams, rapid response ambulances, tele-ICU support, and life-saving equipment. They are capable of handling critical conditions like cardiac arrest, stroke, trauma, and poisoning, ensuring immediate and expert care.
       </div>
-      <img class="info-image" src="C:\Users\admin\OneDrive\Desktop\sample web\images\Apollo-DRDO-Hospitals-Kanchanbagh-Hyderabad_NHT.jpg" alt="Service Image">
+      <img class="info-image" src="./images/Apollo-DRDO-Hospitals-Kanchanbagh-Hyderabad_NHT.jpg" alt="Service Image">
     </div>
   </div>
 
@@ -812,7 +812,7 @@ button:hover {
    <div class="info-container">
     <div class="info-heading" style="color: blue; text-align: center; padding-left: 200px; font-size: larger;"><h2>Welcome to AIIMS</h2></div>
     <div class="info-content">
-      <img class="info-image" src="C:\Users\admin\OneDrive\Desktop\sample web\images\aiims.jpeg" alt="Hospital Image">
+      <img class="info-image" src="./images/aiims.jpeg" alt="Hospital Image">
       <div class="info-text">
        All India Institute of Medical Sciences (AIIMS), Bengaluru is a premier public medical institution currently under development with approval from the Union Health Ministry. It is part of the AIIMS network—autonomous, nationally renowned government medical universities recognized as Institutes of National Importance .Advanced hospital facilities across key specialties including cardiology, neurology, oncology, pediatrics and surgery—modeled after the flagship AIIMS Delhi.A comprehensive 24×7 Emergency Medicine Department, designed with triage areas, resuscitation bays, and round‑the‑clock diagnostics & labs. Staffed by senior/junior residents, nurses, and on‑call specialists, it ensures immediate care for critical cases .A sprawling, thoughtfully planned campus with extensive infrastructure: lecture theatres, libraries, student hostels, green zones, and modern diagnostic equipment such as CT, MRI, and ICU setups .
       </div>
@@ -825,7 +825,7 @@ button:hover {
       <div class="info-text" style="margin: 10px;">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, doloribus labore commodi dolore, necessitatibus, quod ad debitis temporibus praesentium nisi impedit fugiat ex unde nemo atque accusantium quisquam maiores sunt cumque autem iure sint eius molestias. Non facilis reiciendis vitae deserunt officia obcaecati, ullam quibusdam modi doloribus architecto voluptatem saepe culpa id repellat dignissimos quasi adipisci. Quis exercitationem fugiat culpa vitae, harum laborum assumenda nemo tempora optio dolore accusantium, quibusdam debitis officia, ad explicabo maxime quaerat voluptas et maiores sed fugit quod quos deleniti! Possimus delectus voluptatibus reprehenderit quis reiciendis distinctio, vitae earum, magnam dolore sed consequatur ut eveniet quaerat laboriosam! Unde eius eligendi rem modi praesentium quae magni nihil ut eaque ducimus rerum consequatur, perferendis quaerat! Recusandae tempora atque quos aut aspernatur libero doloremque corporis excepturi quae porro. Possimus, quidem. Maxime debitis, delectus voluptatum blanditiis pariatur distinctio aspernatur consequuntur in corrupti, animi repellat possimus quibusdam sint natus doloribus aliquid?
       </div>
-      <img class="info-image" src="C:\Users\admin\OneDrive\Desktop\sample web\images\aster.jpg" alt="Service Image">
+      <img class="info-image" src="./images/apollo.webp" alt="Service Image">
     </div>
   </div>
 
@@ -833,7 +833,7 @@ button:hover {
     <div class="info-container">
     <div class="info-heading" style="color: blue;  text-align: center; padding-left: 200px; font-size: larger;"><h2>Apollo Bangalore</h2></div>
     <div class="info-content">
-      <img class="info-image" src="C:\Users\admin\OneDrive\Desktop\sample web\images\apollo-hospitals_bannerghatta_road_building-min_0.webp" alt="Hospital Image">
+      <img class="info-image" src="./images/apollo-hospitals_bannerghatta_road_building-min_0.webp" alt="Hospital Image">
       <div class="info-text">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolor omnis impedit ex commodi! Eveniet atque aliquid dolore, blanditiis, magnam itaque obcaecati rerum, nostrum expedita sunt ea architecto facilis. Incidunt rerum commodi blanditiis debitis pariatur eius sit voluptatibus inventore ipsum omnis, rem illum quo veniam, saepe libero alias laudantium harum asperiores porro explicabo, qui officiis? Accusamus nostrum corrupti itaque quae reprehenderit consequatur similique modi velit! Eum a, voluptatibus labore, quaerat reiciendis in optio minima beatae error laborum necessitatibus temporibus illo repellat eaque exercitationem ut velit quibusdam quae, rem doloribus blanditiis numquam porro hic deleniti. Eos, doloribus recusandae! Blanditiis sunt vel, neque alias tempore deleniti nostrum distinctio quasi ab ducimus voluptatum laborum repellat molestias debitis cum. Doloremque minima voluptas aspernatur vel error in quaerat enim distinctio saepe, excepturi maxime reprehenderit suscipit quo alias! Deserunt, facilis nobis dolore facere repellat at corporis odit totam laudantium animi accusamus, soluta rerum incidunt voluptatum itaque?
       </div>
